Bug 1019319 - part 2: Import as link type should be prefed. r=mrbkap